<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrincipal"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/bienvenida"
                android:textColor="@color/ColorTextoBlanco"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenida2"
                android:textColor="@color/ColorTextoBlanco"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/fondo_cartas">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="36dp"
            android:text="@string/login"
            android:textColor="@color/ColorTextoNegro"
            android:textSize="36dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/fondo_edit_text"
                android:drawableEnd="@drawable/icono_usuario"
                android:drawableTint="@color/ColorTextoNegro"
                android:hint="@string/et_correo"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"/>


            <EditText
                android:id="@+id/et_contraseña"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/fondo_edit_text"
                android:drawableEnd="@drawable/icono_contra"
                android:hint="@string/et_contrasenia"
                android:inputType="textPassword"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>